--- a/ApplicationMVVM/app/build.gradle
+++ b/ApplicationMVVM/app/build.gradle
@@ -23,9 +23,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    dataBinding {
+        enabled = true
     }
 }
 
@@ -44,10 +49,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    //glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
+    // Picasso
+    implementation "com.squareup.picasso:picasso:2.71828"
     //cardview
     implementation 'androidx.cardview:cardview:1.0.0'
 
@@ -56,7 +59,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
 
     // Data binding
-    kapt "com.android.databinding:compiler:3.1.3"
+    kapt "com.android.databinding:compiler:3.2.0-alpha10"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     // RecyclerView
     def android_support_version = '28.0.0-alpha3'
