--- a/ApplicationMVVM/app/build.gradle
+++ b/ApplicationMVVM/app/build.gradle
@@ -44,34 +44,21 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    //retrofit
-    def retrofitVersion = "2.8.1"
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    // Picasso
-    implementation "com.squareup.picasso:picasso:2.71828"
-    //cardview
-    implementation 'androidx.cardview:cardview:1.0.0'
-
-    //okHttp
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+//okHttp
     implementation 'com.squareup.okhttp3:okhttp:4.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.6.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.6.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.14.2"
 
-    // Data binding
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // Databinding compiler
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation "androidx.cardview:cardview:1.0.0"
 
-    // RecyclerView
-    def android_support_version = '28.0.0-alpha3'
-    implementation "com.android.support:recyclerview-v7:$android_support_version"
-
-    //MVVM
-    def lifecycle_version = '2.2.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-    //livedata
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 }
