--- a/ApplicationMVVM/app/build.gradle
+++ b/ApplicationMVVM/app/build.gradle
@@ -70,4 +70,12 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:2.1.6"
     implementation "org.koin:koin-androidx-viewmodel:2.1.6"
     implementation "org.koin:koin-androidx-ext:2.1.6"
+
+    //coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation "com.jakewharton.timber:timber:4.7.1"
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
